tests/machine/x/cpp/pure_global_fold.mochi.error
line 4: ../../../tests/machine/x/cpp/pure_global_fold.mochi.cpp:4:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
    4 | auto inc(auto x) {
      |          ^~~~
../../../tests/machine/x/cpp/pure_global_fold.mochi.cpp: In function ‘auto inc(auto:28)’:
../../../tests/machine/x/cpp/pure_global_fold.mochi.cpp:5:21: error: ‘k’ was not declared in this scope
    5 |         return (x + k);
      |                     ^

  3 | 
  4 | auto inc(auto x) {
  5 | 	return (x + k);
