tests/machine/x/cpp/pure_global_fold.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

auto inc(auto x) {
	return (x + k);
}

int main() {
	auto k = 2;
	(cout << inc(3));
	return 0;
}
